idk but I did in fact do some things

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,22 +1,16 @@
-monitor=eDP-1,1920x1080,0x0,1
-monitor=DP-1,3440x1440,1920x0,1
+monitor=eDP-1,1920x1080@120,0x0,1
 
-$terminal = kitty
+$terminal = ghostty 
 $fileManager = ranger
-$menu = rofi -show run
+$menu = wofi --show run
 
 exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar & hyprpaper
-exec-once = hypridle
-
-# use the if switching to the next window with the opening keypress is unwanted
-#bind = alt, $key, exec, hyprswitch gui --mod-key alt_l --key $key --close mod-key-release --reverse-key=key=$reverse
-#bind = alt $reverse, $key, exec, hyprswitch gui --mod-key alt_l --key $key --close mod-key-release --reverse-key=key=$reverse
+exec-once = waybar & hyprpaper & hypridle & swayosd-server
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRSHOT_DIR,/home/krymancer/Pictures/
+env = HYPRSHOT_DIR,/home/junho/Pictures/
 
 general { 
     gaps_in = 4
@@ -24,29 +18,21 @@ general {
 
     border_size = 0
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 8
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
-
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
@@ -56,11 +42,9 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -72,21 +56,18 @@ animations {
     animation = workspaces, 1, 1, default
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -94,7 +75,6 @@ misc {
 ### INPUT ###
 #############
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = br
     kb_variant = abnt2
@@ -111,13 +91,10 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
@@ -191,12 +168,12 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Media and special keys
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
-bind=, XF86MonBrightnessUp, exec, brightnessctl set 10%+
-bind=, XF86MonBrightnessDown, exec, brightnessctl set 10%-
+bindle=, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise 
+bindle=, XF86AudioLowerVolume, exec, swayosd-client --output-volume lower 
+bind=, XF86MonBrightnessUp, exec, swayosd-client --brightness raise 
+bind=, XF86MonBrightnessDown, exec, swayosd-client --brightness lower 
 # bindl=, XF86AudioMute, exec, amixer set Master toggle
-bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl=, XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called play , but it toggles 
 bindl=, XF86AudioNext, exec, playerctl next 
 bindl=, XF86AudioPrev, exec, playerctl previous
@@ -221,3 +198,8 @@ bind = $mainMod, V, exec, rofi -modi "clipboard:greenclip print" -show clipboard
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+# NVIDIA environment variables
+env = NVD_BACKEND,direct
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
