--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -1,11 +1,15 @@
+width=600
+height=350
+location=center
 show=drun
-width=750
-height=400
-always_parse_args=true
-show_all=false
-term=kitty
-hide_scroll=true
-print_command=true
+prompt=Search...
+filter_rate=100
+allow_markup=true
+no_actions=true
+halign=fill
+orientation=vertical
+content_halign=fill
 insensitive=true
-prompt=
-columns=2
+allow_images=true
+image_size=40
+gtk_dark=true
