--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 
 background {
     monitor =
-    path = ~/wallpaper.png # NOTE only png supported for now
+    path = ~/Pictures/wallpaper.png # NOTE only png supported for now
     blur_passes = 2
     blur_size = 5
 }
