--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,3 @@
-preload=~/wallpaper.png
-wallpaper=eDP-1,~/wallpaper.png
-wallpaper=DP-1,~/wallpaper.png
+preload=~/Pictures/wallpaper.png
+wallpaper=eDP-1,~/Pictures/wallpaper.png
 splash=false
