--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,5 +1,6 @@
 {
-  "position": "top",
+    "reload_style_on_change": true,
+    "position": "top",
     "margin-bottom" : 5,
     "margin-left": 10,
     "margin-right": 10,
@@ -12,9 +13,9 @@
     ],
     "modules-right": [
     "battery",
+		"bluetooth",
     "pulseaudio",
     "network",
-    "clock",
     "custom/wlogout",
     ],
     "hyprland/window": {
@@ -29,21 +30,34 @@
       "format": "{icon}",
       "on-click": "activate",
       "format-icons": {
-        "active": " ",
+        "default": "",
+        "1": "1",
+        "2": "2",
+        "3": "3",
+        "4": "4",
+        "5": "5",
+        "6": "6",
+        "7": "7",
+        "8": "8",
+        "9": "9",
+        "active": " "
       },
-      "sort-by-number": true,
       "persistent-workspaces": {
-        "*": 4, // 5 workspaces by default on every monitor
-        "HDMI-A-1": 3 // but only three on HDMI-A-1
-      },
+        "1": [],
+        "2": [],
+        "3": [],
+        "4": [],
+        "5": []
+      }
     },
     "clock": {
       "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
       "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-      "format": "  {usage}%",
-      "tooltip": false
+      "interval": 5,
+      "format": "󰍛",
+      "on-click": "ghostty -e btop"
     },
     "memory": {
       "format": "{}%  "
@@ -54,43 +68,51 @@
       "format-icons": ["", "", ""]
     },
     "battery": {
-      "states": {
-        "warning": 30,
-        "critical": 15
-      },
-      "format": "{icon}  {capacity}%",
-      "format-full": "{icon}  {capacity}%",
-      "format-charging": "󰂄  {capacity}%",
-      "format-plugged": "  {capacity}%",
-      "format-alt": "{time} {icon}",
-      "format-icons": ["", "", "", "", ""]
+      "format": "{icon}",
+      "format-full": "{icon}",
+      "format-charging": "󰂄",
+      "format-plugged": "",
+      "format-icons": ["", "", "", "", ""],
+      "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
+    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
+    "interval": 5,
+    "states": {
+      "warning": 20,
+      "critical": 10
+    }
+    },
+    "bluetooth": {
+      "format": "",
+      "format-disabled": "󰂲 ",
+      "format-connected": " ",
+      "tooltip-format": "Devices connected: {num_connections}",
+      "on-click": "blueberry"
     },
     "network": {
-      "format-wifi": "  {signalStrength}%",
-      "format-ethernet": "{cidr} ",
+      "format-wifi": " ",
+      "format-ethernet": "󰈀 ",
       "tooltip-format": "{ifname} via {gwaddr} ",
       "format-linked": "{ifname} (No IP) ",
-      "format-disconnected": " ⚠ ",
-      "format-alt": "{ifname}: {ipaddr}/{cidr}"
+      "format-disconnected": "󰌙 ",
+    "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+    "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+    "tooltip-format-disconnected": "Disconnected",
+    "interval": 3,
+    "nospacing": 1
     },
     "pulseaudio": {
-      "format": "{icon}  {volume}%",
-      "format-bluetooth": "{volume}% {icon} {format_source}",
-      "format-bluetooth-muted": " {icon} {format_source}",
-      "format-muted": " {format_source}",
+      "format": "{icon}",
+			"format-muted": " ",
+			"tooltip-format": "{volume}%",
       "format-icons": {
-        "headphone": "",
-        "hands-free": "",
-        "headset": "",
-        "phone": "",
-        "portable": "",
-        "car": "",
-        "default": ["", "", ""]
+        "headphone": " ",
+        "default": ["", " ", " "]
       },
-      "on-click": "pavucontrol"
+      "on-click": "pavucontrol",
+			 "on-click-right": "pamixer -t"
     },
     "custom/wlogout": {
       "on-click": "wlogout",
-      "format": "⏻ "
+      "format": " "
     },
 }
