--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,79 +1,44 @@
-monitor=eDP-1,1920x1080@120,0x0,1
 
-$terminal = ghostty 
-$fileManager = ranger
-$menu = wofi --show run
+# See https://wiki.hypr.land/Configuring/Monitors/
+monitor=eDP-1,1920x1080,0x0,1
 
-exec-once = $terminal
-exec-once = nm-applet &
-exec-once = waybar & hyprpaper & hypridle & swayosd-server
+$terminal = ghostty
+$fileManager = dolphin
+$menu = wofi --show drun
+
+exec-once = waybar & hyprpaper & hypridle
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRSHOT_DIR,/home/junho/Pictures/
-
-general { 
+general {
     gaps_in = 4
     gaps_out = 0
-
     border_size = 0
-
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    resize_on_border = false 
-
-    allow_tearing = false
-
-    layout = dwindle
 }
 
 decoration {
-    rounding = 8
-
+    rounding = 0
     active_opacity = 1.0
     inactive_opacity = 1.0
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-        
-        vibrancy = 0.1696
-    }
 }
 
 animations {
-    enabled = true
-
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 1, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 1, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 2, default
-    animation = workspaces, 1, 1, default
+    enabled = false 
 }
 
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true 
+    preserve_split = true 
 }
 
 master {
     new_status = master
 }
 
-misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+misc {
+    force_default_wallpaper = 0 
+    disable_hyprland_logo = true 
 }
-
-
-#############
-### INPUT ###
-#############
 
 input {
     kb_layout = br
@@ -81,13 +46,11 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-
     follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 
 
     touchpad {
-        natural_scroll = true
+        natural_scroll = true 
     }
 }
 
@@ -100,35 +63,23 @@ device {
     sensitivity = -0.5
 }
 
-binds {
-allow_workspace_cycles = true
-}
 
-
-####################
-### KEYBINDINGSS ###
-####################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-#bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -140,10 +91,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-bind = $mainMod, TAB, workspace, previous
-bind = alt, TAB, workspace, previous
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -155,51 +102,33 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Media and special keys
-bindle=, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise 
-bindle=, XF86AudioLowerVolume, exec, swayosd-client --output-volume lower 
-bind=, XF86MonBrightnessUp, exec, swayosd-client --brightness raise 
-bind=, XF86MonBrightnessDown, exec, swayosd-client --brightness lower 
-# bindl=, XF86AudioMute, exec, amixer set Master toggle
-bindl=, XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called play , but it toggles 
-bindl=, XF86AudioNext, exec, playerctl next 
-bindl=, XF86AudioPrev, exec, playerctl previous
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
+
+windowrule = suppressevent maximize, class:.*
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+bind = $mainMod, TAB, workspace, previous
+bind = alt, TAB, workspace, previous
 
 bind = , PRINT, exec, hyprshot -m output -m eDP-1
 
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, V, exec, rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
-
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-# NVIDIA environment variables
-env = NVD_BACKEND,direct
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
