--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = wofi --show drun
 
-exec-once = waybar & hyprpaper & hypridle
+exec-once = hyprpanel & hyprpaper & hypridle & clipse -listen
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -130,5 +130,11 @@ bind = $mainMod, TAB, workspace, previous
 bind = alt, TAB, workspace, previous
 
 bind = , PRINT, exec, hyprshot -m output -m eDP-1
+bind = $mainMod, PRINT, exec, grim -g "$(slurp)" - | wl-copy
 
 bind = $mainMod, L, exec, hyprlock
+
+windowrulev2 = float,class:(com.example.clipse)
+windowrulev2 = size 622 652,class:(com.example.clipse)
+
+bind = $mainMod SHIFT, V, exec, ghostty --class=com.example.clipse -e 'clipse'
