--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,100 +1,101 @@
-$Scripts = $HOME/.config/hypr/scripts
+source = $HOME/.config/hypr/mocha.conf
 
+$accent = $mauve
+$accentAlpha = $mauveAlpha
+$font = Inter Nerd Font Prop
+
+# GENERAL
 general {
-    ignore_empty_input=true
+  hide_cursor = true
+  ignore_empty_input=true
 }
 
-auth {
-    pam:enabled = true
-    fingerprint:enabled
-}
-
+# BACKGROUND
 background {
-    monitor =
-    path = ~/Pictures/wallpaper.png # NOTE only png supported for now
-    blur_passes = 2
-    blur_size = 5
+  monitor =
+  path = $HOME/Pictures/wallpaper.png
+  blur_passes = 2
+  color = $base
 }
 
+# LAYOUT
+label {
+  monitor =
+  text = Layout: $LAYOUT
+  color = $text
+  font_size = 25
+  font_family = $font
+  position = 30, -30
+  halign = left
+  valign = top
+}
+
+# TIME
+label {
+  monitor =
+  text = $TIME
+  color = $text
+  font_size = 90
+  font_family = $font
+  position = -30, 0
+  halign = right
+  valign = top
+}
+
+# DATE
+label {
+  monitor =
+  text = cmd[update:43200000] date +"%A, %d %B %Y"
+  color = $text
+  font_size = 25
+  font_family = $font
+  position = -30, -150
+  halign = right
+  valign = top
+}
+
+# FINGERPRINT
+{
+  monitor = "";
+  text = "$FPRINTPROMPT";
+  color = "$text";
+  font_size = 14;
+  font_family = $font;
+  position = "0, -107";
+  halign = "center";
+  valign = "center";
+}
+
+# USER AVATAR
+image {
+  monitor =
+  path = $HOME/Pictures/profile.png
+  size = 100
+  border_color = $accent
+  position = 0, 75
+  halign = center
+  valign = center
+}
+
+# INPUT FIELD
 input-field {
-    monitor =
-    size = 300, 60
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    outer_color = rgba(23, 23, 23, 0.7)
-    inner_color = rgba(23, 23, 23, 0.7)
-    font_color = rgba(255, 255, 255, 0.7)
-    fade_on_empty = true
-    font_size = 34
-    font_family = SF Pro
-    placeholder_text = Password... # Text rendered in the input box when it's empty.
-    hide_input = false
-    
-    position = 0, 200
-    halign = center
-    valign = bottom
-}
-
-# Date
-label {
-    monitor =
-    text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B %Y')" </b>"
-    color = rgba(255, 255, 255, .6)
-    font_size = 34
-    font_family = SF Pro
-    position = 0, -100
-    halign = center
-    valign = top
-}
-
-# Hour-Time
-label {
-    monitor =
-    text = cmd[update:1000] echo -e "$(date +"%H")"
-#    text = cmd[update:1000] echo -e "$(date +"%I")" #AM/PM
-    color = rgba(255, 255, 255, .6)
-    font_size = 200
-    font_family = SF Pro
-    position = 0, -200
-    halign = center
-    valign = top
-}
-
-# Minute-Time
-label {
-    monitor =
-    text = cmd[update:1000] echo -e "$(date +"%M")"
-    color = rgba(255, 255, 255, .6)
-    font_size = 200
-    font_family = SF Pro
-    position = 0, -500
-    halign = center
-    valign = top
-}
-
-# User
-label {
-    monitor =
-    text =    $USER
-    color = rgba(255, 255, 255, .6)
-    font_size = 18
-    font_family = Inter Display Medium
-
-    position = 0, 100
-    halign = center
-    valign = bottom
-}
-
-# uptime
-label {
-    monitor =
-    text = cmd[update:60000] echo "<b> "$(uptime -p || $Scripts/UptimeNixOS.sh)" </b>"
-    color = rgba(255, 255, 255, .5)
-    font_size = 24
-    font_family = SF Pro
-    position = 0, 0
-    halign = right
-    valign = bottom
+  monitor =
+  size = 300, 60
+  outline_thickness = 4
+  dots_size = 0.2
+  dots_spacing = 0.2
+  dots_center = true
+  outer_color = $accent
+  inner_color = $surface0
+  font_color = $text
+  fade_on_empty = false
+  placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+  hide_input = false
+  check_color = $accent
+  fail_color = $red
+  fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+  capslock_color = $yellow
+  position = 0, -47
+  halign = center
+  valign = center
 }
