--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -9,5 +9,16 @@
   "theme.osd.location": "top left",
   "menus.dashboard.powermenu.avatar.image": "/home/junho/Pictures/profile.png",
   "menus.dashboard.powermenu.avatar.name": "system",
-  "theme.bar.menus.menu.dashboard.profile.radius": "100%"
+  "theme.bar.menus.menu.dashboard.profile.radius": "100%",
+  "theme.bar.buttons.modules.hypridle.enableBorder": false,
+  "theme.bar.buttons.modules.ram.enableBorder": false,
+  "theme.bar.buttons.modules.cpu.enableBorder": false,
+  "bar.customModules.hypridle.label": true,
+  "theme.bar.buttons.modules.cava.enableBorder": false,
+  "menus.clock.time.military": true,
+  "menus.clock.time.hideSeconds": true,
+  "menus.clock.weather.enabled": false,
+  "menus.clock.weather.unit": "metric",
+  "theme.bar.buttons.modules.worldclock.enableBorder": false,
+  "bar.customModules.worldclock.showIcon": true
 }
