--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -20,5 +20,7 @@
   "menus.clock.weather.enabled": false,
   "menus.clock.weather.unit": "metric",
   "theme.bar.buttons.modules.worldclock.enableBorder": false,
-  "bar.customModules.worldclock.showIcon": true
+  "bar.customModules.worldclock.showIcon": true,
+  "theme.bar.buttons.clock.enableBorder": false,
+  "bar.clock.format": "%a %d %b %H:%M "
 }
