--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=eDP-1,1920x1080,0x0,1
 
 $terminal = ghostty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = walker 
 
 exec-once = hyprpanel & hyprpaper & hypridle & clipse -listen
 
