--- a/.config/walker/config.toml
+++ b/.config/walker/config.toml
@@ -2,7 +2,7 @@ app_launch_prefix = ""
 terminal_title_flag = ""
 locale = ""
 close_when_open = false
-theme = "catppuccin-mocha"
+theme = "mocha"
 monitor = ""
 hotreload_theme = false
 as_window = false
