new packages, diffview for nvim and startship now

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,12 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=eDP-1,1920x1080,0x0,1
+monitor=eDP-1,preferred,auto,1,transform,0
 
 $terminal = ghostty
 $fileManager = dolphin
 $menu = walker 
 
-exec-once = hyprpanel & hyprpaper & hypridle & clipse -listen
+exec-once = hyprpanel & hyprpaper & hypridle & clipse -listen & iio-hyprland
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
