using walker as emoji picker and clipboard manager

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = walker 
 
-exec-once = hyprpanel & hyprpaper & hypridle & clipse -listen & iio-hyprland
+exec-once = hyprpanel & hyprpaper & hypridle & clipse -listen & iio-hyprland & walker --gapplication-service
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -137,4 +137,5 @@ bind = $mainMod, L, exec, hyprlock
 windowrulev2 = float,class:(com.example.clipse)
 windowrulev2 = size 622 652,class:(com.example.clipse)
 
-bind = $mainMod SHIFT, V, exec, ghostty --class=com.example.clipse -e 'clipse'
+bind = $mainMod SHIFT, V, exec, walker -m clipboard
+bind = $mainMod, E, exec, walker -m emojis
